--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".Graph"></activity>
+        <activity android:name=".menu_activity"></activity>
     </application>
 
 </manifest>
